This file documents the revision history for Perl extension Osgood::Server.

2.0.0
    - Use Catalyst::Action::REST to make things better
    - Bump Client version dep
    - Remove use of Serializer::*
    - Lots of style and POD cleanups
    - Add date_created to events table
    - Add DBIx::Class::TimeStamp dep and use InflateColumn::DateTime
    - Get rid of REST view
    - Switch to JSON for add response

1.2.0
 		- Use custom ResultSet to move meat of searches from Controller to Model
    - Fix bug in query's limit parameter
1.1.0
	  - Documentation with example scenarios
    - Fix bad variable initialization for direct event fetches
    - New serialization API
1.0.6    2008-03-10
    - Packaging problems.
1.0.5	 2008-03-10
	- Use prefetching and HashRefInflator in event/list to speed up queries by
	  60% in tests.
1.0.4  2008-03-01 07:47:00
	- Version bump
1.0.3  2008-02-29 10:56:00
				- More release cleanup
1.0.2  2008-02-29 10:48:00
				- Remove some dependencies
				- Release to world.
1.0.1  2007-12-28 14:00:16
        - changed query parameters: removed "date" parameter, replaced with "date_before", "date_after", "date_equals"
        - updated documentation for above changes
0.01  2007-11-10 14:30:16
        - initial revision, generated by Catalyst