@@ -4,6 +4,8 @@ use strict;
 use warnings;
 use base 'Catalyst::Controller::REST';
 
+use DBIx::Class::ResultClass::HashRefInflator;
+
 #
 # Sets the actions in this controller to be registered with no prefix
 # so they function identically to actions created in MyApp.pm
@@ -101,11 +103,11 @@ my ($self, $c) = @_;
             }
 
             my $net_event = Osgood::Event->new(
-                id	=> $event->{'event_id'},
-                object	=> $event->{'object'}->{'name'},
-                action	=> $event->{'action'}->{'name'},
+                id    => $event->{'event_id'},
+                object    => $event->{'object'}->{'name'},
+                action    => $event->{'action'}->{'name'},
                 date_occurred => DateTime::Format::MySQL->parse_datetime($event->{'date_occurred'}),
-                params	=> $params
+                params    => $params
             );
             # add net event to list
             $net_list->add_to_events($net_event);
@@ -126,73 +128,75 @@ sub event_POST {
     my ($self, $c) = @_;
 
 	# wrap the insert in a transaction. if any one fails, they all do
-	my $schema = $c->model('OsgoodDB')->schema;
-	$schema->txn_begin;
+    # my $schema = $c->model('OsgoodDB')->schema;
+    # $schema->txn_begin;
 
     my $events = $c->req->data;
 
     my $list = Osgood::EventList->unpack($events);
-    my $iter = $list->iterator;
-    # count events
-    my $count = 0;
-    my $error = undef;
+    # my $iter = $list->iterator;
+    # # count events
+    # my $count = 0;
+    # my $error = undef;
+    # 
+    # while (($iter->has_next) && (!defined($error))) {
+    #     my $event = $iter->next;
+    # 
+    #     # find or create the action
+    #     my $action = $c->model('OsgoodDB::Action')->find_or_create({
+    #         name => $event->action
+    #     });
+    #     if (!defined($action)) {
+    #         $error = "Error: bad action " . $event->action();
+    #         last;
+    #     }
+    #     # find or create the object
+    #     my $object = $c->model('OsgoodDB::Object')->find_or_create({
+    #         name => $event->object
+    #     });
+    #     if (!defined($object)) {
+    #         $error = "Error: bad object " . $event->object;
+    #         last;
+    #     }
+    #     # create event - this has to be a new thing. no find here. 
+    #     my $db_event = $c->model('OsgoodDB::Event')->create({
+    #         action_id => $action->id,
+    #         object_id => $object->id,
+    #         date_occurred => $event->date_occurred
+    #     });
+    #     if (!defined($db_event)) {
+    #         $error = 'Error: bad event ' . $event->object . ' '
+    #             . $event->action . ' ' . $event->date_occurred;
+    #         last;
+    #     }
+    #     # add all params
+    #     my $params = $event->params;
+    #     if (defined($params)) {
+    #         foreach my $param_name (keys %{$params}) {
+    #             my $event_param = $c->model('OsgoodDB::EventParameter')->create({
+    #                 event_id => $db_event->id,
+    #                 name => $param_name,
+    #                 value => $params->{$param_name}
+    #             });
+    #             if (!defined($event_param)) {
+    #                 $error = 'Error: bad event parameter' .  $param_name .
+    #                          ' ' .  $params->{$param_name};
+    #             }
+    #         }
+    #     }
+    # 
+    #     # increment count of inserted events
+    #     $count++;
+    # }
+    # 
+    # if (defined($error)) {      # if error, rollback
+    #     $count = 0;             # if error, count is zero. nothing inserted.
+    #     $schema->txn_rollback;
+    # } else {                    # otherwise, commit
+    #     $schema->txn_commit;
+    # }
 
-    while (($iter->has_next) && (!defined($error))) {
-        my $event = $iter->next;
-
-        # find or create the action
-        my $action = $c->model('OsgoodDB::Action')->find_or_create({
-            name => $event->action
-        });
-        if (!defined($action)) {
-            $error = "Error: bad action " . $event->action();
-            last;
-        }
-        # find or create the object
-        my $object = $c->model('OsgoodDB::Object')->find_or_create({
-            name => $event->object
-        });
-        if (!defined($object)) {
-            $error = "Error: bad object " . $event->object;
-            last;
-        }
-        # create event - this has to be a new thing. no find here. 
-        my $db_event = $c->model('OsgoodDB::Event')->create({
-            action_id => $action->id,
-            object_id => $object->id,
-            date_occurred => $event->date_occurred
-        });
-        if (!defined($db_event)) {
-            $error = 'Error: bad event ' . $event->object . ' '
-                . $event->action . ' ' . $event->date_occurred;
-            last;
-        }
-        # add all params
-        my $params = $event->params;
-        if (defined($params)) {
-            foreach my $param_name (keys %{$params}) {
-                my $event_param = $c->model('OsgoodDB::EventParameter')->create({
-                    event_id => $db_event->id,
-                    name => $param_name,
-                    value => $params->{$param_name}
-                });
-                if (!defined($event_param)) {
-                    $error = 'Error: bad event parameter' .  $param_name .
-                             ' ' .  $params->{$param_name};
-                }
-            }
-        }
-
-        # increment count of inserted events
-        $count++;
-    }
-
-    if (defined($error)) {      # if error, rollback
-        $count = 0;             # if error, count is zero. nothing inserted.
-        $schema->txn_rollback;
-    } else {                    # otherwise, commit
-        $schema->txn_commit;
-    }
+    my ($count, $error) = $c->add_from_list($list);
 
     $c->stash->{count} = $count;
 
